--- a/package.json
+++ b/package.json
@@ -15,16 +15,23 @@
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.1.0",
+    "@angular/localize": "^14.1.0",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "ng-bootstrap-icons": "^13.1.2-canary.1",
+    "ngx-bootstrap": "^8.0.0",
     "@ngrx/component": "^14.2.0",
     "@ngrx/component-store": "^14.2.0",
     "@ngrx/effects": "^14.2.0",
     "@ngrx/router-store": "^14.2.0",
     "@ngrx/store": "^14.2.0",
     "@ngrx/store-devtools": "^14.2.0",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.2.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
